--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=e8oe2g1jwnus4h64
-spring.datasource.password=s3gx08f5nd15nqja
-spring.datasource.url=jdbc:mysql://vlvlnl1grfzh34vj.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/rezic96z6y74qyi3?allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=dominik
+spring.datasource.password=migacz5000
+spring.datasource.url=jdbc:mysql://localhost:3306/space_flights?allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.jpa.show-sql=true
-server.port=${PORT:8080}
 
+
+
+#spring.datasource.username=e8oe2g1jwnus4h64
+#spring.datasource.password=s3gx08f5nd15nqja
+#spring.datasource.url=jdbc:mysql://vlvlnl1grfzh34vj.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/rezic96z6y74qyi3?allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.jpa.show-sql=true
+#server.port=${PORT:8080}
