Add exception handling to catch JWT errors and log using slf4j.

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,14 @@
             <version>0.9.1</version>
         </dependency>
 
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
