Change database properties for heroku deploy

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,23 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=dominik
-spring.datasource.password=migacz5000
-spring.datasource.url=jdbc:mysql://localhost:3306/space_flights?allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.jpa.show-sql=true
-
-#spring.datasource.username=e8oe2g1jwnus4h64
-#spring.datasource.password=s3gx08f5nd15nqja
-#spring.datasource.url=jdbc:mysql://vlvlnl1grfzh34vj.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/rezic96z6y74qyi3?allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=dominik
+#spring.datasource.password=migacz5000
+#spring.datasource.url=jdbc:mysql://localhost:3306/space_flights?allowPublicKeyRetrieval=true&serverTimezone=UTC
 #spring.jpa.show-sql=true
-#server.port=${PORT:8080}
+
+#server.port=8443
+#server.ssl.key-password=junior java developer
+#server.ssl.key-store-password=junior java developer
+#server.ssl.key-store=src/main/resources/identity.jks
+#server.ssl.key-store-type=pkcs12
+#server.ssl.enabled=true
+#server.ssl.key-alias=localhost
+
+#authorization.jwt.secret.key=dFKYX}&[K;'{{;q
+##1 hour
+#authorization.jwt.token.expire.time.in.millisecond = 3600000
+
+spring.datasource.username=e8oe2g1jwnus4h64
+spring.datasource.password=s3gx08f5nd15nqja
+spring.datasource.url=jdbc:mysql://vlvlnl1grfzh34vj.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/rezic96z6y74qyi3?allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.jpa.show-sql=true
+server.port=${PORT:8080}
