--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <commons-codec.version>1.13</commons-codec.version>
         <xmlbeans.version>3.1.0</xmlbeans.version>
         <stax-api.version>1.0.1</stax-api.version>
+        <swagger.version>2.7.0</swagger.version>
     </properties>
 
     <dependencies>
@@ -165,7 +166,18 @@
             <version>1.65</version>
         </dependency>
 
+        <!--    Swagger UI  -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
 
     </dependencies>
 
